fix(QTabs): improve tabs width calculation; improve arrow detection on mobile #8356, #8317
#8356, #8317

--- a/ui/src/components/tabs/QTabs.sass
+++ b/ui/src/components/tabs/QTabs.sass
@@ -182,11 +182,6 @@
       &--full
         min-height: 52px
 
-body.mobile .q-tabs
-
-  &__content
-    overflow: auto
-
 @media (min-width: $breakpoint-lg-min)
   .q-header, .q-footer
     .q-tab__content
